==> sankalp123321/MusicPlayer/final sd/uart.c <==
#include <LPC17xx.h>
#include <stdarg.h>
#include "uart.h"
#include "stdutils.h"

void UART_Init(uint32_t var_baudRate_u32)
{
	
	LPC_PINCON->PINSEL0 &= ~0x000000F0;
	LPC_PINCON->PINSEL0 |= 0x00000050;			// Enable TxD0 P0.2 and p0.3 
	
    LPC_UART0->FCR = M_UartFifoControl_U32;		// Enable FIFO and reset Rx/Tx FIFO buffers	
	LPC_UART0->LCR = M_UartLineControl_U32;	    // 8bit data, 1Stop bit, No parity
	
	UART_SetBaudRate(var_baudRate_u32);
	
	util_BitClear(LPC_UART0->LCR,(M_DlabBitPosition_U8)); // Clear DLAB after setting DLL,DLM
		
}

void UART_SetBaudRate(uint32_t var_baudRate_u32)
{
	uint32_t var_RegValue_u32, var_Pclk_u32;

	
	var_Pclk_u32 = uart_GetPclk();
		
   	if((var_baudRate_u32 >= C_MinBaudRate_U32) && (var_baudRate_u32<=C_MaxBaudRate_U32))
	{
		/* Check if the requested baudrate is within range,
	     If yes then calculate the value to be loaded into baud rate generator. */
		var_RegValue_u32 = M_GetBaudRateGeneratorValue(var_Pclk_u32,var_baudRate_u32);
	}
	else
	{
		/*	 Invalid baudrate requested, hence set it to default baudrate of 9600 */
		var_RegValue_u32 = M_GetBaudRateGeneratorValue(var_Pclk_u32,9600);
	}
		
	LPC_UART0->DLL = util_ExtractByte0to8(var_RegValue_u32);
	LPC_UART0->DLM = util_ExtractByte8to16(var_RegValue_u32);
	
}

char UART_RxChar()
{
	char data;
	
	while(util_IsBitCleared(LPC_UART0->LSR,M_UartRDRposition_U8));  	// Wait till the data is received
	data = LPC_UART0->RBR;                          	// Read received data	
	return(data);										// return the received data
}

void UART_TxChar(char var_uartData_u8)
{
	
				
	while(util_IsBitCleared(LPC_UART0->LSR,M_UartTHREposition_U8));	  /* Wait till transmitter buffer becomes empty */
    LPC_UART0->THR=var_uartData_u8;						// Load the data to be transmitted    
}
