==> ExploreEmbedded/Code-Libraries/CodeLibraries/PIC/UART/uart_RxTxChar/uart.c <==
#include <stdarg.h>
#include "uart.h"

void UART_Init(uint32_t var_baudRate_u32)
{	
    TRISC=0x80;      // Configure Rx pin as input and Tx as output  
  	TXSTA=0x20;      // Asynchronous mode, 8-bit data & enable transmitter
	RCSTA=0x90;      // 8-bit continous receive enable
	UART_SetBaudRate(var_baudRate_u32);
}

void UART_SetBaudRate(uint32_t var_baudRate_u32)
{
	uint8_t RegValue;

	if((var_baudRate_u32 >= C_MinBaudRate_U32) && (var_baudRate_u32<=C_MaxBaudRate_U32))
	{
		/* Check if the requested baudate is within range,
	     If yes then calculate the value to be loaded into baud rate generator. */
		RegValue = M_GetBaudRateGeneratorValue(var_baudRate_u32);
	}
	else
	{
		/*	 Invalid baudrate requested, hence set it to default baudrate of 9600 */
		RegValue = M_GetBaudRateGeneratorValue(9600);
	}

	SPBRG = RegValue; 
}

char UART_RxChar()
{
    while(RCIF==0);    // Wait till the data is received 
    RCIF=0;            // Clear receiver flag
    return(RCREG);        // Return the received data to calling function
}

void UART_TxChar(char var_uartData_u8)
{
    while(TXIF==0);  // Wait till the transmitter register becomes empty
	TXIF=0;        // Clear transmitter flag
    TXREG=var_uartData_u8;        // load the char to be transmitted into transmit reg
}
